Add some codes to transform output into latex

--- a/assets/Latex Templates/notes.tex
+++ b/assets/Latex Templates/notes.tex
@@ -79,6 +79,6 @@
 % Main content from external files
 \chapter{Some difficult sentences in GRE}
 % \addcontentsline{toc}{chapter}{Reading Notes} % Add to TOC
-\input{../Contents/example} % This will include the main text and notes
+\input{../Contents/reading} % This will include the main text and notes
 
 \end{document}
