Finish the first version of the software

--- a/assets/Latex Templates/notes.tex
+++ b/assets/Latex Templates/notes.tex
@@ -1,6 +1,6 @@
 \documentclass{book}
 \usepackage[utf8]{inputenc}
-\usepackage{ctex}
+% \usepackage{ctex}
 \usepackage{xcolor}
 \usepackage{lipsum} % For placeholder text, can be removed
 \usepackage{fancyhdr} % For headers and footers
@@ -77,8 +77,8 @@
 \newpage
 
 % Main content from external files
-\chapter{Some difficult sentences in GRE}
-% \addcontentsline{toc}{chapter}{Reading Notes} % Add to TOC
+\chapter{Some difficult sentences in papers}
+
 \input{../Contents/reading} % This will include the main text and notes
 
 \end{document}
