Add a new dictionary

--- a/assets/Latex Templates/notes.tex
+++ b/assets/Latex Templates/notes.tex
@@ -12,6 +12,7 @@
 \usepackage{parskip}
 \tcbuselibrary{breakable}
 \usepackage{enumitem}
+\usepackage[utf8]{inputenc}
 
 % Define colors
 \definecolor{titlecolor}{RGB}{0, 102, 102}
